--- a/15 Puzzle Game/15 Puzzle Game.csproj
+++ b/15 Puzzle Game/15 Puzzle Game.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="Game2.cs" />
+    <Compile Include="Game3.cs" />
     <Compile Include="TextFile.cs" />
     <Compile Include="Print.cs" />
     <Compile Include="Program.cs" />
